--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -4,7 +4,7 @@
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #333;
+    color: rgb(34, 30, 30);
     font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
     border: 1px solid #f0f0f0;
@@ -20,7 +20,7 @@
     font-family: 'Muli', sans-serif;
     font-weight: bold;
     font-size: 1.5em;
-    color: #ffffff;
+    color: #f1ecec;
     line-height: normal;
     margin: 10px 0;
     text-align: center;
@@ -80,7 +80,7 @@
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
     line-height: 1.42857143;
-    color: rgb(255, 255, 255);
+    color: rgb(20, 19, 19);
     font-family: 'Nunito', sans-serif;
     text-align: center;
     box-sizing: border-box;
@@ -108,7 +108,7 @@ line-height: 1.42857143;
 color: #333;
 font-family: 'Nunito', sans-serif;
 box-sizing: border-box;
-background: #ffffff;
+background: #f7f3f3;
 position: relative;
 overflow: hidden;
 text-align: left;
