--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -2,7 +2,7 @@
     <div id="carouselExample1" class="carousel slide z-depth-1-half" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://bit.ly/3z8qbuo" alt="First slide">
+          <img class="d-block w-100" src="https://st3.depositphotos.com/9880800/14506/i/450/depositphotos_145063499-stock-photo-students-studying-together.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="card-title">La edudacion dia a dia esta cambiando</div>
             <div class="card-parraf">Sea parte de esta nueva modalidad de aprender</div>
@@ -84,47 +84,24 @@
                              <img src="assets/perfil/perfil.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Jose Merida</h3>
+                             <h3>Abel Arusti</h3>
                              <span>Me encanta enseñar, en mis tiempos libre lo hago de forma gratuita.</span>
                         </div>
                        
                    </div>
               </div>
 
-              <div class="col-md-3 col-sm-6">
-                   <div class="team-thumb">
-                        <div class="team-image">
-                             <img src="assets/perfil/perfil1.jpg" class="img-responsive" alt="">
-                        </div>
-                        <div class="team-info">
-                             <h3>Manuel S.</h3>
-                             <span>Nunca dejes de aprender, porque el conocimiento es poder.</span>
-                        </div>
-                      
-                   </div>
-              </div>
+              
 
+              
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="assets/perfil/perfil2.jpg" class="img-responsive" alt="">
+                             <img src="assets/perfil/elena.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Ronaldo R.</h3>
-                             <span>Soy ingeniero informatico y sistema de profesion, disfruto enseñar.</span>
-                        </div>
-                      
-                   </div>
-              </div>
-
-              <div class="col-md-3 col-sm-6">
-                   <div class="team-thumb">
-                        <div class="team-image">
-                             <img src="assets/perfil/perfil3.jpg" class="img-responsive" alt="">
-                        </div>
-                        <div class="team-info">
-                             <h3>Eddy Escalante</h3>
-                             <span>Graduado por excelencia, activo en la enseñanza a estudiantes.</span>
+                             <h3>Elena Eguez Rodas</h3>
+                             <span>Interactica, dinámica y activa en la enseñanza a estudiantes.</span>
                         </div>
                        
                    </div>
@@ -164,7 +141,7 @@
 
               <div class="col-md-6 col-sm-12">
                    <div class="contact-image">
-                        <img src="https://pbs.twimg.com/media/E81MrPgXMAoAUhV.jpg" class="img-responsive" alt="Smiling Two Girls">
+                        <img src="https://www.igssgt.org/wp-content/uploads/sites/5/2019/11/Taller-de-Seguridad-Ocupacional-Escuela-de-Auxiliares-de-Enfermeria-IGSS-2019-1.jpg" class="img-responsive" alt="Smiling Two Girls">
                    </div>
               </div>
 
@@ -206,7 +183,7 @@
                 <ul class="list-unstyled" style="text-align:initial">
                     <li style="margin-bottom:20px">
                         <span class="fas fa-map-marker-alt" style="color: white;"></span>
-                        <span class="text" style="color: white;">Zona cañaverales, calle 10 # 35</span>
+                        <span class="text" style="color: white;">Avenida Busch, edificio # 69</span>
 
                     </li>
                     <li style="margin-bottom:20px">
@@ -216,7 +193,7 @@
                     </li>
                     <li style="margin-bottom:20px">
                         <span class="fas fa-phone-alt" style="color: white;"></span>
-                        <span class="text" style="text-align:justify;color: white;">+591 60019665</span>
+                        <span class="text" style="text-align:justify;color: white;">+591 75058530</span>
                     </li>
                     <li style="margin-bottom:20px">
                         <span class="fas fa-envelope" style="color: white;"></span>
@@ -236,7 +213,7 @@
                 <!-- Links -->
                 <h5 class="footer-title">Nosotros</h5>
 
-                <p style="text-align:justify; color:white">
+                <p style="text-align:justify; color:rgb(255, 255, 255)">
                     YoEstudiante nacio con la iniciativa de un grupo de estudiantes de la Universidad Autonoma Gabriel Rene Moreno, con el fin de dar oportunidades a todo aquel que desee enseñar ya sea de forma gratuita o de paga.
                 </p>
 
@@ -289,7 +266,7 @@
     </ul>
     <!-- Social buttons -->
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" style="color:white">
+    <div class="footer-copyright text-center py-3" style="color:rgb(245, 245, 245)">
         © 2022 All rights reserved:
         <a href="https://mdbootstrap.com/" style="color:white"> yoestudiante.com</a>
     </div>
