--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 
     <!--CABECERA DE LA WEB-->
-    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:  rgba(0, 0, 0,0.1)">
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:  rgba(51, 46, 46, 0.1)">
         <a class="navbar-brand" [routerLink]="['/']" style="cursor: pointer;">Auxiliaturas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
